--- a/ActivitiDemo01_bobo/pom.xml
+++ b/ActivitiDemo01_bobo/pom.xml
@@ -102,6 +102,12 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
+        <!--添加commons-io的依赖进行IOUtils.copy()下载资源-->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
     </dependencies>
 
 
