--- a/ActivitiDemo03_springboot_bobo/pom.xml
+++ b/ActivitiDemo03_springboot_bobo/pom.xml
@@ -48,7 +48,15 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.25</version>
         </dependency>
-
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.7.14</version>
+        </dependency>
     </dependencies>
 
 
